<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <Button
        android:id="@+id/mCameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTakePhoto"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginRight="32dp"
        app:layout_constraintBottom_toTopOf="@+id/img_profile"/>


    <Button
        android:id="@+id/mGalleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/buttonSelectPhoto"
        app:layout_constraintBottom_toTopOf="@+id/img_profile"
        app:layout_constraintEnd_toStartOf="@+id/mDetectButton"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toEndOf="@+id/mCameraButton"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/descriptionImage"
        app:layout_constraintBottom_toTopOf="@+id/mDetectButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/bg_login"
        tools:srcCompat="@drawable/bg_login" />



    <Button
         android:text="@string/buttonDiagnose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mDetectButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/mResultTextView"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:text="@string/defaultImage"
        android:layout_width="0dp"
        android:layout_height="75dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:id="@+id/mResultTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="32dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>
</androidx.constraintlayout.widget.ConstraintLayout>

